<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/viewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="15dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold">
    </TextView>
    <TextView
        android:id="@+id/releaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewName"
        android:layout_margin="10dp"
        android:text="@string/relDate"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp">

    </TextView>
    <TextView
        android:id="@+id/viewRelDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/releaseDate"
        android:layout_toEndOf="@id/releaseDate"
        android:textColor="@color/black"
        android:textSize="18sp">

    </TextView>
    <TextView
        android:id="@+id/Duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/releaseDate"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignStart="@id/releaseDate"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/duration">
    </TextView>
    <TextView
        android:id="@+id/viewDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/viewRelDate"
        android:layout_alignBottom="@id/Duration"
        android:textColor="@color/black"
        android:textSize="18sp">
    </TextView>
    <TextView
        android:id="@+id/Director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/Duration"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/Duration"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/director">
    </TextView>
    <TextView
        android:id="@+id/viewDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/Director"
        android:layout_alignStart="@id/viewDuration"
        android:textSize="18sp"
        android:textColor="@color/black">
    </TextView>
    <TextView
        android:id="@+id/Stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/Director"
        android:layout_below="@id/Director"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/stars"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold">
    </TextView>
    <TextView
        android:id="@+id/viewStar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/Stars"
        android:layout_alignStart="@id/viewDirector"
        android:textSize="18sp"
        android:textColor="@color/black">
    </TextView>
    <TextView
        android:id="@+id/viewStar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewStar1"
        android:layout_alignStart="@id/viewStar1"
        android:textColor="@color/black"
        android:textSize="18sp">
    </TextView>
    <TextView
        android:id="@+id/viewStar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewStar2"
        android:layout_alignStart="@id/viewStar2"
        android:textColor="@color/black"
        android:textSize="18sp">
    </TextView>
    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewStar3"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignStart="@id/Stars"
        android:text="@string/rating"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold">
    </TextView>
    <TextView
        android:id="@+id/viewRating1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/rating"
        android:layout_alignStart="@id/viewStar3"
        android:textColor="@color/black"
        android:textSize="18sp">
    </TextView>
    <TextView
        android:id="@+id/viewRating2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewRating1"
        android:layout_alignStart="@id/viewRating1"
        android:textColor="@color/black"
        android:textSize="18sp">
    </TextView>

</RelativeLayout>